styles.css
/* Colors*/
:root {
    --clr-accent: #FFA0A0;
    --clr-backround: #1B3C59;
    --clr-primary: #89CCB8 ;
}
/* General */

html {
    font-family: 'Cabin', Sans-Serif;
    font-size: 16px;
    box-sizing: border-box;
  }

.image img {
    display: block;
    max-width: 100%;
    padding-bottom: 1rem;
  }

  .center {
    text-align: center;
  }

button {
    width: 10rem;
    height: 2.5rem;
    border: 0.1rem solid transparent;
    box-shadow: 0.0625rem 0.3125rem 1.25rem rgb(59, 59, 59,0.5);
    border-radius: 0.5rem;
    font-size: 1rem;
    font-family: 'Roboto Condensed',sans-serif;
    font-weight: 600;

}   

button:active {
    box-shadow: 0 0.0625rem 0.125rem rgb(59, 59, 59,0.5);
    font-size: 1.1rem;
}

button:hover {
    border: 0.1rem solid rgb(164, 247, 252,0.5);
    box-shadow: 0.0625rem 0.3125rem 0.625rem rgb(59, 59, 59,0.5);
}

.primary-button {
    background-color: var(--clr-accent);
    color: rgb(0, 0, 0);
}

.primary-button:active {
    border: 0.2rem solid var(--clr-accent);
}

.secondary-button {
    background-color: var(--clr-primary);
    color: rgb(0, 0, 0);
}

.secondary-button:active {
    border: 0.2rem solid var(--clr-primary);
}
  /* Header */

header {
    position: fixed;
    width: 100%;
    height: 4rem;
    box-shadow: 0 -0.2rem 1rem var(--clr-primary);
    background-color: var(--clr-backround);
    z-index: 10;
  }

header .container {
    display: flex;
    justify-content: flex-end;
    margin-right: 1rem;
    align-items: center;
}

header .container a {
    margin-left: 1rem;
    margin-right: auto;
}

header .logo {
    flex: 1;
    height: 2rem;
    padding: 1rem 0;
}

header nav {
    margin-left: 0;
}

header nav ul {
    display: flex;
  }

  nav li {
    padding-left: 2rem;
  }
  
  nav a {
    vertical-align: bottom;
    line-height: 1.6;
    font-size: 1rem;
    color: var(--clr-primary);
    
  }

 .login {
    color: var(--clr-accent);
  }

  /* Hero Section */
.hero {
    display: flex;
    flex-direction: column;
    background-color: var(--clr-accent);
    background-image: url('./images/hero-banner.jpeg');
    background-blend-mode: multiply;
    background-position: bottom;
    background-repeat: no-repeat;
    background-size: cover;
    height: 30rem;
    justify-content: center;
    padding-top: 4rem;
}

.hero h1 {
    font-size: 2rem;
    color: var(--clr-primary);
    line-height: 1.5;
    font-weight: 700;
    margin: 0 1rem 2rem;
    font-family: 'Roboto Condensed', Sans-Serif;
}

.hero ul {
    margin: 0 auto 2rem;;
    color: var(--clr-primary);
    text-align: left;
    display: flex;
    flex-direction: column;
    line-height: 2;
}

.hero ul li {
    list-style: "> ";
}

.button-container {
    padding: 1rem;
    display: flex;
    margin: 0 auto;
}
.button-container .secondary-button{
    margin-left: 1.25rem;
}

/* Stories Section */

.stories {
    display: flex;
    flex-direction: column;
    background-color: var(--clr-backround);
    color: var(--clr-primary);
}

.stories h2 {
    font-size: 1.5rem;
    font-family: 'Roboto Condensed', Sans-Serif;
    font-weight: 700;
    padding: 1.5rem 0;
    margin: 0 1rem;
}

.stories p {
    font-size: 1rem;
    margin: 0 1rem;
    padding-bottom: 1rem;
}

.images-containers div {
    width: 15rem;
}
.images-containers {
    display: flex;
    justify-content: space-evenly;
    align-items: flex-start;
    flex-wrap: wrap;
    padding-bottom: 2rem;
}

.content h3 {
    font-size: 1.1rem;
    font-family: 'Roboto Condensed',sans-serif;
    font-weight: 700;
    padding-bottom: 1rem;
    margin: 0 1rem;
}

.story {
    box-shadow: 0.0125rem 0rem 0.2rem var(--clr-primary);
    padding: 1rem;
    margin: 1rem;
}

/* Team Section*/
.team {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 2rem;
    background-color: var(--clr-backround);
    box-shadow: 0 0.2rem 1rem var(--clr-primary);
}
.team h2 {
    font-size: 1.5rem;
    font-family: 'Roboto Condensed',sans-serif;
    font-weight: 700;
    padding-bottom: 1rem;
    color: var(--clr-primary);
    margin: 0 1rem;
}
.members {
    display: flex;
    padding: 2rem;
    flex-wrap: wrap;
    justify-content: center;
}

.members div {
    width: 15rem;
    border: 0.0625rem solid;
    padding: 1rem;
    margin: 1rem;
    box-shadow: 0.0125rem 0.2rem 0.5rem var(--clr-accent);
    color: var(--clr-primary);
}
  /* Info Section */

  .contact-us {
    background-color: var(--clr-accent);
    background-image: url('./images/hero-banner.jpeg');
    background-blend-mode: multiply;
    background-position: bottom;
    background-repeat: no-repeat;
    background-size: cover;
    color: var(--clr-primary);
    height: 10rem;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding-bottom: 2rem;
    padding-top: 1rem;
    box-shadow: 0rem 0.5rem 1.2rem var(--clr-primary);
    z-index: 1;
  }

  .contact-us h1 {
    font-size: 2rem;
    line-height: 1.5;
    font-weight: 700;
    margin: 0 1rem 2rem;
    font-family: 'Roboto Condensed', Sans-Serif;
  }

  .contact-us p {
    font-size: 1rem;
    padding-bottom: 1rem;
    flex-wrap: wrap;
    margin: 0 1rem;
  }
  /* Footer*/

  footer {
    background-color: var(--clr-backround);
    color: var(--clr-primary);
    height: 4rem;
    display: flex;
    align-items: center;
    justify-content: center;
    box-shadow: 0rem 0.5rem 1.2rem var(--clr-primary);
  }

  footer p {
    font-size: 0.8rem;
    font-family: 'Roboto Condensed',sans-serif;
    margin: 1rem;
  }

  /* Mobile version */
@media only screen and (max-width: 480px) {
    h2 {
        font-size: 1.8rem;
    }
   
    nav li {
        padding-left: 0rem;
      }
    
      .button-container {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
    }

     .button-container .secondary-button{
        margin: 1.25rem auto;
    }

    .intro p,
    .content p {
        font-size: 1.1rem;
        padding-bottom: 1rem;
    }

    .content h3 {
        font-size: 1.3rem;
    }
}

